tests/errors/e_tstring_unclosed1.pyx
# mode: error

t'

_ERRORS = """
3:2: Unclosed string literal
"""
